[package]
authors = ["MathxH Chen <brainfvck@foxmail.com>"]
edition = "2018"
name = "simplechain"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

cli = {path = "../cli"}
tokio = {version = "1", features = ["full"]}
